# prism-policy-ai

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/processed/: causal_effects_eventstudy.csv  mechanism_benchmark.csv  model_eval_summary_v3.csv  panel_state_year.parquet  policy_text_mechanism_state_year_v3.parquet
docs/: data.md  limitations.md  methodology.md  results.md
notebooks/: quickstart_prism.ipynb
prism/: __init__.py  cli.py  config.py  dashboard.py  data.py  io.py  publish.py
results/tables/: causal_event_study_primary.csv  crash_model_comparison.csv  headline_metrics.csv  mechanism_benchmark_overview.csv  mechanism_benchmark_sources.csv  mechanism_model_comparison.csv  scenario_forecasts_v3.csv
tests/: test_content.py  test_data_contracts.py  test_headlines.py  test_publish.py  test_repo_metadata.py
