[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-policy-analysis"
version = "0.1.0"
description = "Curated PRISM research package for mechanism-aware alcohol policy analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.20",
  "pyarrow>=15.0",
  "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["prism*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

